added credits added portal delay

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -24,7 +24,9 @@
 }
 
 .credit p {
-    text-align: right;
+    text-align: left;
+    font-size: 16px;
+    font-family: Georgia;
 }
 
 .credit a {
