added all htmls deleted useless assets successfully set up https

--- a/public/css/horizontal_menu.css
+++ b/public/css/horizontal_menu.css
@@ -26,7 +26,7 @@ ul {
 
 
 #menu ul {
-    background-color: #CCC;
+    background-color: rgb(193, 218, 236);
     height: 50px;
     padding: 20px;
     text-align: right;
@@ -35,7 +35,7 @@ ul {
 
 #menu ul li {
     font-family: "Trebuchet MS", Helvetica, sans-serif;
-    font-size: 15px;
+    font-size: 17px;
     line-height: 50px;
     color: #333;
     display: inline;
