--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,7 @@
 @charset "UTF-*";
+body {
+    background-color: rgb(247, 255, 255);
+}
 
 .game {
     width: 100%;
@@ -8,6 +11,15 @@
 
 .beforeLoad {
     text-align: center;
+    font-family: Bahnschrift;
+}
+
+.beforeLoad h1 {
+    font-size: 35px;
+}
+
+.beforeLoad p {
+    font-size: 25px;
 }
 
 .credit {
@@ -36,3 +48,45 @@
 .credit h3 {
     text-align: right;
 }
+
+#credits table {
+    width: 100%;
+    table-layout: fixed;
+}
+
+.about {
+    background-color: rgb(230, 253, 255);
+}
+
+#about h1 {
+    text-align: center;
+    font-family: "Adobe Devanagari";
+    font-size: 40px;
+}
+
+#about p {
+    font-family: "Adobe Devanagari";
+    font-size: 25px;
+    padding-left: 20px;
+    padding-right: 20px;
+    text-indent: 30px;
+}
+
+#contact {
+    padding-right: 20px;
+    padding-left: 20px;
+}
+
+#contact h1 {
+    text-align: left;
+    font-family: "Arial Black";
+    font-size: 40px;
+}
+
+#contact p {
+    text-align: left;
+    font-family: "Arial Black";
+    font-size: 20px;
+}
+
+#blog
